manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/app-root: /leos-pilot/ui
spec:
  rules:
    - host: leos.apps.digilab.network
      http:
        paths:
          - backend:
              service:
                name: svc
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - leos.apps.digilab.network
      secretName: leos-tls
